# BOPE-GPT

./: .gitignore  README.md  botorch_branin_basic_bayesian_optimization_manyloops.py  botorch_branin_basic_bayesian_optimization_oneloop.py  botorch_multiBO.py
.ipynb_checkpoints/: preferentialBO_llm_multiplot-checkpoint.ipynb
backend/: app.py  config.py  requirements.txt  wsgi.py
backend/fastapi_backend/: readme.md  requirements.txt  run_bope_log.txt
backend/fastapi_backend/src/: .env  .mockenv  .pylintrc  bope_functions.py  fischer_ann_weights.json  helpers.py  main.py  models.py  pyproject.toml  requirements.txt  run_bope.py  run_bope_eubo.py  services.py
backend/models/: bope.py  model_run.py
backend/routes/: main.py
bope-gpt-app/: app_visualisation_2.py  app_visualisation_3.py  app_visualisation_5.py  app_visualisation_botorch.py  requests_to_dash_server.py  the_app_10.html  the_app_11.html
data/: BOPE.yml  best_vals_case_3.pkl  fischer_data_processed.csv  fischer_model.py  multiBO.ipynb  multiBO_plots.ipynb  preferentialBO.ipynb  preferentialBO_llm.ipynb  preferentialBO_llm_distillation_RV.ipynb  preferentialBO_llm_minimizing_typocase_1.ipynb  preferentialBO_llm_multiplot.ipynb  preferentialBO_llm_multiplot_correction_case_1.ipynb  preferentialBO_llm_multiplot_correction_case_3.ipynb  preferentialBO_llm_multiplot_withplot_case_1.ipynb  preferentialBO_llm_multiplot_withplot_case_2.ipynb  preferentialBO_original.ipynb  singleBO.ipynb  singleBO_plots.ipynb  use_models.ipynb
frontend/: .env.example  README.md  package-lock.json  package.json
(+35 files in other folders)
